# PI_41_124318

./: .env  .gitignore  1_work_1_version.md  Concept_variant1.md  Concept_variant2.md  DataDiagramm.drawio  DataDiagramm.html  DiagrammC1.drawio  DiagrammC2.drawio  DiagrammC3(ver2).drawio  DiagrammC3.drawio  DiagrammC4(LevelContext).drawio  DiagrammUMLC3.txt  Dockerfile  docker-compose.yml  example_sqlite_usage.py  noco.db  nocodb.db  pyproject.toml  ~$ncept_variant1.md
.ipynb_checkpoints/: DiagrammOfMonth-checkpoint.py
DataBase/: noco.db
Information/: ClassDiagrammUML.txt  DiagrammC1.html  DiagrammC2.drawio  DiagrammC3(ver2).drawio  DiagrammC3.drawio  DiagrammC4.mermaid  DiagrammOfMonth.py  Economic.xlsx  Semestr_work.md  architecture.md  db_schema.md  use_cases.md
app/: ui_cli.py  ui_tk.py
app/domain/: models.py  repositories.py
app/infrastructure/: db_interface.py  lecture_repository_nocodb.py  lecture_repository_sqlite.py  nocodb_client.py  sqlite_database.py
app/services/: lecture_service.py
diagramms/: .dockerignore  .env  DiagrammOfMonth.py  DiagrammOfMonthAPI.py  Dockerfile  app.py  docker-compose.yml  requirements.txt  wsgi.py
locust/: docker-compose.yml
locust/locust/: locustfile.py  (+3 more)
postgres/: docker-compose.yml
postgres2/: Dockerfile  docker-compose.yml
tests/: api_client.py  conftest.py  records.py  run_all_tests.py  test_accessibility.py  test_lections.py  test_metaphors.py  test_performance.py  test_problem_marks.py  test_students.py  test_teachers.py
trivy-reports/: trivy-fs-report.txt  trivy-report.json  trivy-report.txt
(+15 files in other folders)
